--- a/Assets/style.css
+++ b/Assets/style.css
@@ -61,7 +61,7 @@ ul .btn:hover {
     width: fit-content;
     height: fit-content;
     background-color: rgba(0, 143, 48, 0.5);
-    padding: 5px;
+    padding: 5px 10px;
     border-radius: 20%;
 }
 
@@ -69,7 +69,7 @@ ul .btn:hover {
     width: fit-content;
     height: fit-content;
     background-color: rgba(242, 255, 0, 0.5);
-    padding: 5px;
+    padding: 5px 10px;
     border-radius: 20%;
 }
 
@@ -77,6 +77,6 @@ ul .btn:hover {
     width: fit-content;
     height: fit-content;
     background-color: rgba(0, 143, 48, 0.5);
-    padding: 5px;
+    padding: 5px 10px;
     border-radius: 20%;
 }
